# RoadGraphs

./: CMakeLists.txt
.VSCodeCounter/2025-05-25_14-25-40/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-25_14-27-09/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-26_19-50-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-28_22-18-03/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-28_22-18-14/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-29_23-09-42/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-05-29_23-10-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
data/: Cities.txt  Connections.txt  odleglosci.csv  odleglosci.ods  odleglosci.xlsx
include/: Djikstra.h  DownloadData.h  Input.h  InputCodes.h  Node.h  Roads.h  Vec.h  visualization.h
src/: Djikstra.cpp  DownloadData.cpp  Input.cpp  Node.cpp  Roads.cpp  main.cpp  visualization.cpp
